[package]
name = "depzen"
version = "0.1.0"
edition = "2021"
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
description = "A command line tool to help with managing massive trees of interdependent packages."
include = ["**/*.rs", "Cargo.toml"]
license = "MIT OR Apache-2.0"
keywords = ["cli", "productivity"]

[dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
structopt = { version = "0.3.26", features = ["suggestions"] }
